--- a/app/src/main/res/drawable-v24/ic_launcher_1.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_1.xml
@@ -4,68 +4,73 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:pathData="M33.17,64.5l0,-21l42,-0l0,21z"
+        android:pathData="M30.79,64.69l0,-23.38l46.76,-0l0,23.38z"
         android:strokeWidth="0.5"
         android:fillColor="#fff"
         android:strokeColor="#000" />
     <path
-        android:pathData="M70.1,59.05a1.5,2 0,1 0,3 0a1.5,2 0,1 0,-3 0z"
+        android:pathData="M26.33,66.36l0,-26.72l4.45,-0l0,26.72z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M26.34,37.41l0,-3.34l4.45,-0l0,3.34z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M27.44,39.64l0,-2.23l2.23,-0l0,2.23z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M26.33,71.93l0,-3.34l4.45,-0l0,3.34z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M27.45,68.58l0,-2.23l2.23,-0l0,2.23z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M77.54,66.36l0,-26.72l4.45,-0l0,26.72z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M77.55,37.42l0,-3.34l4.45,-0l0,3.34z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M78.66,39.64l0,-2.23l2.23,-0l0,2.23z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M77.55,71.93l0,-3.34l4.45,-0l0,3.34z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M78.66,68.59l0,-2.23l2.23,-0l0,2.23z"
+        android:strokeWidth="0.5"
+        android:fillColor="#fff"
+        android:strokeColor="#000" />
+    <path
+        android:pathData="M37.65,47.8l-0.08,11.84a4.53,4.53 0,0 1,-1.23 2.54c-0.2,0 -0.33,0 -0.38,-0.16L36,56.41l0.07,-8L36,46.19l1.76,0.61c0.16,0.05 0.18,0.15 0.08,0.31ZM44.95,53.8c0.11,0.05 0.11,0.13 0,0.23l-0.23,0.46 -0.46,2.23c-0.1,0.41 0,0.64 0.31,0.69a4.31,4.31 0,0 0,1.61 -0.15c0.36,0 0.64,-0.34 0.85,-1a0.22,0.22 0,0 1,0.15 -0.08s0.08,0 0.08,0.15c-0.1,0.62 0,1 0.23,1.08 0.56,0.67 0.39,1.15 -0.54,1.46a5.1,5.1 0,0 1,-2.38 0.15c-0.92,-0.25 -1.36,-1.07 -1.31,-2.46l0.08,-1.92L43.34,53.26L41.8,53.26l1.08,0.46c0.1,0.05 0.1,0.13 0,0.23l-0.23,0.31a17.39,17.39 0,0 1,-4.92 6.15c-0.16,0.05 -0.18,0 -0.08,-0.16a17.22,17.22 0,0 0,3.69 -7h-0.61a3,3 0,0 1,-0.93 1.23c-0.25,0.15 -0.41,0.13 -0.46,-0.08l0.08,-2.15L39.42,51.18c0,-0.25 0,-0.66 -0.08,-1.23v-0.69s0,-0.08 0.16,-0.08l1.3,0.7 2.54,-0.08a14.23,14.23 0,0 0,1 -3.46l1.69,0.54c0.1,0 0.1,0.15 0,0.31s-0.44,0.46 -0.85,0.92L43.65,49.8h1.23l0.69,-0.85 1.54,0.85q0.15,0 0,0.15l-0.39,0.62 -0.07,2.3 0.15,0.23c0,0.11 0,0.16 -0.08,0.16L43.8,53.26ZM38,43.57a0.66,0.66 0,0 1,0.24 0.08q2.53,0.84 2.46,1.38c0.05,0.41 -0.24,0.9 -0.85,1.46 -0.36,0.16 -0.59,0.08 -0.69,-0.23a6.91,6.91 0,0 0,-1.31 -2.53C37.83,43.57 37.88,43.52 38,43.57ZM40.39,46.8c1.28,0.57 1.94,1.08 2,1.54a1.29,1.29 0,0 1,-0.77 1.07c-0.31,0.06 -0.49,0 -0.54,-0.3A2.79,2.79 0,0 0,40.34 47C40.29,46.8 40.32,46.75 40.42,46.8ZM40.7,50.26v2.61l4.15,-0.07L44.85,50.18ZM44.39,45.88A18.47,18.47 0,0 0,42 46l-0.61,-0.46 6.69,-0.23 0.84,-0.92 1.46,1h0.08s0,0.13 -0.08,0.23l-0.54,0.84L50,54.18l0.15,4.23A3.81,3.81 0,0 1,47.72 62a0.62,0.62 0,0 1,-0.23 0.08c-0.05,-0.05 -0.05,-0.13 0,-0.23a2.13,2.13 0,0 0,-0.77 -1.62,0.21 0.21,0 0,1 -0.07,-0.15c0,-0.05 0,-0.08 0.07,-0.08 1.08,0 1.56,-0.2 1.46,-0.76l-0.07,-13.54Z"
+        android:fillColor="#002747" />
+    <path
+        android:pathData="M60.87,56.64c0.15,0 0.18,0 0.08,0.16l-2.7,2.76A20.06,20.06 0,0 0,56.79 61c0,0.11 -0.13,0.11 -0.23,0l-1.15,-1.15c-0.15,-0.1 -0.18,-0.18 -0.08,-0.23 0.72,-0.36 1.26,-0.62 1.62,-0.77l-0.08,-8.76 -1.31,0.07a5.48,5.48 0,0 0,-1.53 0.16l-0.7,-0.62 3.31,-0.07 0.85,-1 1.53,0.92c0.1,0 0.1,0.13 0,0.23l-0.38,0.54 -0.54,7.84ZM55.64,44q2.23,0.86 2.61,1.62a1.67,1.67 0,0 1,-0.84 1.61c-0.36,0.16 -0.62,0.08 -0.77,-0.23a5.55,5.55 0,0 0,-1.15 -2.84C55.43,44 55.49,44 55.64,44ZM64.87,50 L66.94,50.69c0.16,0.05 0.18,0.18 0.08,0.39l-0.39,0.53 -0.23,2.54a7.72,7.72 0,0 1,-0.23 1.23l3.15,-0.08L70.4,54.1l1.54,1.39c0.1,0.1 0.08,0.15 -0.08,0.15l-5.76,0.23Q65.56,60.34 56,62.48c-0.15,0 -0.23,0 -0.23,-0.07a0.23,0.23 0,0 1,0.16 -0.23q7.92,-2.16 8.53,-6.31l-2.3,0.16a12,12 0,0 0,-1.77 0.15,1.41 1.41,0 0,1 -0.39,0.08l-0.46,-0.62 5,-0.15a4.91,4.91 0,0 0,0.15 -1.15l0.16,-1.54a16.55,16.55 0,0 0,0 -2.23ZM63.17,47c-0.71,0.06 -1.38,0.13 -2,0.24l-0.62,-0.62 3.77,-0.08L64.32,46c0,-1 0,-1.82 -0.08,-2.39l2.08,0.54c0.1,0 0.15,0 0.15,0.08a0.24,0.24 0,0 1,-0.08 0.3,1.68 1.68,0 0,0 -0.3,1.16l-0.08,0.77 2,-0.08 0.92,-0.92 1.23,1.07 0.08,0.16a0.23,0.23 0,0 1,-0.16 0.07L66,46.88v2.3l3.07,-0.07 0.77,-0.85 1.85,1.62a0.24,0.24 0,0 1,0.15 0.23,0.91 0.91,0 0,1 -0.23,0.15 5.08,5.08 0,0 0,-2.92 1.23c-0.15,0 -0.21,0 -0.15,-0.15l0.53,-1.77 -6.38,0.15c-0.1,0 -0.33,0 -0.69,0.08 -0.82,0.1 -1.36,0.18 -1.61,0.23l-0.62,-0.62 4.54,-0.15L64.31,47ZM60.48,52.39c1.59,0.41 2.44,0.82 2.54,1.23a1.28,1.28 0,0 1,-0.46 1.23c-0.31,0.25 -0.54,0.2 -0.69,-0.16a7.7,7.7 0,0 0,-1.46 -2.07C60.3,52.41 60.33,52.34 60.48,52.34ZM61.64,50.31c1.38,0.31 2.1,0.62 2.15,0.92a1.38,1.38 0,0 1,-0.38 1.16c-0.31,0.2 -0.52,0.15 -0.62,-0.16a3.29,3.29 0,0 0,-1.15 -1.77Q61.4,50.34 61.64,50.26ZM66.02,57.31c2.25,0.71 3.69,1.43 4.3,2.15 0.21,0.41 0.08,1 -0.38,1.77 -0.21,0.2 -0.36,0.3 -0.46,0.3s-0.23,-0.12 -0.39,-0.38a10.24,10.24 0,0 0,-3.15 -3.69S65.92,57.31 66,57.26Z"
+        android:fillColor="#002747" />
+    <path
+        android:pathData="M72.91,59.62a1.67,2.23 0,1 0,3.34 0a1.67,2.23 0,1 0,-3.34 0z"
         android:fillColor="#ed1c24" />
     <path
-        android:pathData="M29.17,66l0,-24l4,-0l0,24z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
+        android:pathData="M74.13,58.36v1a0.39,0.39 0,0 1,-0.11 0.21s0,0 0,0L74.02,58.23l0.15,0.05s0,0 0,0ZM74.75,58.87s0,0 0,0l0,0 0,0.19s0,0.05 0,0.06h0.14s0,0 0.07,-0.09h0s0,0 0,0 0,0.08 0,0.09 0,0.1 0,0.12a0.53,0.53 0,0 1,-0.2 0,0.18 0.18,0 0,1 -0.11,-0.21v-0.28h-0.13l0.1,0v0l0,0a1.46,1.46 0,0 1,-0.42 0.52s0,0 0,0a1.34,1.34 0,0 0,0.31 -0.59h0a0.22,0.22 0,0 1,-0.08 0.1s0,0 0,0v-0.43s0,0 0,0l0.11,0.06h0.21a0.88,0.88 0,0 0,0.09 -0.29l0.14,0s0,0 0,0l-0.07,0.08 -0.13,0.14h0.1l0.06,-0.07 0.13,0.07s0,0 0,0l0,0.05v0.19l0,0s0,0 0,0h-0.25ZM74.16,58h0q0.22,0.08 0.21,0.12s0,0.07 -0.07,0.12 0,0 -0.06,0a0.68,0.68 0,0 0,-0.11 -0.21S74.15,58 74.16,58ZM74.37,58.28c0.11,0 0.16,0.09 0.17,0.13s0,0.06 -0.07,0.09 0,0 0,0a0.25,0.25 0,0 0,-0.07 -0.18S74.36,58.27 74.37,58.28ZM74.37,58.57v0.22h0.35v-0.22ZM74.69,58.2L74.5,58.2l0,0 0.57,0 0.07,-0.07 0.12,0.08h0s0,0 0,0l0,0.07v1a0.33,0.33 0,0 1,-0.2 0.31h0s0,0 0,0a0.21,0.21 0,0 0,-0.07 -0.14h0c0.09,0 0.13,0 0.13,-0.06L75.12,58.19Z"
+        android:fillColor="#fff" />
     <path
-        android:pathData="M29.17,40l0,-3l4,-0l0,3z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M30.17,42l0,-2l2,-0l0,2z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M29.17,71l0,-3l4,-0l0,3z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M30.17,68l0,-2l2,-0l0,2z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M75.17,66l0,-24l4,-0l0,24z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M75.17,40l0,-3l4,-0l0,3z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M76.17,42l0,-2l2,-0l0,2z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M75.17,71l0,-3l4,-0l0,3z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M76.17,68l0,-2l2,-0l0,2z"
-        android:strokeWidth="0.5"
-        android:fillColor="#fff"
-        android:strokeColor="#000" />
-    <path
-        android:pathData="M43.28,50.3l-0.05,8.43a3.26,3.26 0,0 1,-0.88 1.8c-0.14,0 -0.24,0 -0.27,-0.11l0.05,-4 0.06,-5.69 -0.06,-1.58 1.26,0.43c0.11,0 0.13,0.11 0.06,0.22ZM48.48,54.57c0.07,0 0.07,0.09 0,0.16l-0.17,0.33L48,56.65c-0.07,0.29 0,0.45 0.22,0.49A2.93,2.93 0,0 0,49.35 57c0.26,0 0.46,-0.24 0.6,-0.71a0.15,0.15 0,0 1,0.11 0s0.06,0 0.06,0.11c-0.08,0.43 0,0.69 0.16,0.76 0.4,0.47 0.27,0.82 -0.38,1a3.77,3.77 0,0 1,-1.7 0.11c-0.65,-0.18 -1,-0.77 -0.93,-1.75l0.06,-1.37v-1h-1.1l0.77,0.33c0.07,0 0.07,0.09 0,0.16l-0.16,0.22a12.29,12.29 0,0 1,-3.5 4.37c-0.11,0 -0.13,0 -0.06,-0.11a12.28,12.28 0,0 0,2.63 -5h-0.44a2.06,2.06 0,0 1,-0.66 0.87c-0.18,0.11 -0.29,0.09 -0.33,-0.05l0.06,-1.53v-0.77q0,-0.27 -0.06,-0.87v-0.5s0,-0.05 0.11,-0.05l0.93,0.49 1.81,-0.05A10.57,10.57 0,0 0,48 49.27l1.2,0.38c0.07,0 0.07,0.11 0,0.22l-0.6,0.65 -1.09,1.21h0.87l0.49,-0.61 1.1,0.61c0.07,0 0.07,0 0,0.11l-0.28,0.43 0,1.64 0.11,0.17c0,0.07 0,0.11 -0.06,0.11L47.66,54.19ZM43.55,47.3a0.51,0.51 0,0 1,0.17 0.05c1.2,0.4 1.78,0.73 1.75,1s-0.17,0.63 -0.6,1c-0.26,0.1 -0.42,0 -0.49,-0.17a5,5 0,0 0,-0.93 -1.8C43.41,47.3 43.45,47.26 43.55,47.3ZM45.25,49.59c0.91,0.41 1.38,0.77 1.42,1.1a0.91,0.91 0,0 1,-0.55 0.76c-0.21,0 -0.34,0 -0.38,-0.22a2,2 0,0 0,-0.54 -1.53C45.16,49.59 45.18,49.56 45.25,49.59ZM45.47,52.05v1.86l3,0L48.47,52ZM48.09,48.94a11.7,11.7 0,0 0,-1.69 0.11L46,48.72l4.76,-0.17 0.6,-0.65 1,0.71h0s0,0.09 0,0.16l-0.38,0.61L52,54.84l0.11,3a2.72,2.72 0,0 1,-1.69 2.57,0.43 0.43,0 0,1 -0.17,0.06s0,-0.1 0,-0.17a1.53,1.53 0,0 0,-0.55 -1.15,0.16 0.16,0 0,1 0,-0.11 0,0 0,0 1,0 0c0.77,0 1.12,-0.15 1,-0.55l-0.05,-9.62Z"
-        android:fillColor="#002747" />
-    <path
-        android:pathData="M59.8,56.59c0.11,0 0.12,0 0.05,0.11l-1.91,2a14.53,14.53 0,0 0,-1 1c0,0.07 -0.09,0.07 -0.17,0l-0.82,-0.82c-0.11,-0.07 -0.12,-0.13 0,-0.16 0.51,-0.26 0.89,-0.44 1.15,-0.55L57,52 56,52a4.29,4.29 0,0 0,-1.09 0.11l-0.49,-0.44 2.35,-0.05 0.6,-0.71 1.09,0.65c0.08,0 0.08,0.09 0,0.17l-0.27,0.38 -0.38,5.58ZM56.08,47.59a3.72,3.72 0,0 1,1.86 1.15,1.21 1.21,0 0,1 -0.6,1.15c-0.26,0.11 -0.44,0.06 -0.55,-0.16a4,4 0,0 0,-0.82 -2C55.93,47.62 56,47.59 56.08,47.62ZM62.64,51.86 L64.12,52.35c0.11,0 0.12,0.13 0,0.28L63.9,53l-0.17,1.8a5.14,5.14 0,0 1,-0.16 0.88l2.24,-0.06 0.77,-0.87 1.09,1c0.07,0.08 0.06,0.11 0,0.11l-4.1,0.17q-0.39,3.16 -7.17,4.7c-0.11,0 -0.16,0 -0.16,0a0.17,0.17 0,0 1,0.11 -0.17c3.75,-1 5.78,-2.51 6.07,-4.48l-1.64,0.11a7.49,7.49 0,0 0,-1.26 0.11,1.12 1.12,0 0,1 -0.27,0l-0.33,-0.44 3.55,-0.11a3.5,3.5 0,0 0,0.11 -0.82l0.11,-1.09a10.52,10.52 0,0 0,0 -1.59ZM61.44,49.67a13.84,13.84 0,0 0,-1.42 0.17l-0.44,-0.44 2.68,0L62.26,49c0,-0.73 0,-1.29 -0.06,-1.69l1.48,0.38c0.07,0 0.11,0 0.11,0a0.17,0.17 0,0 1,-0.06 0.22,1.21 1.21,0 0,0 -0.21,0.82l-0.06,0.55 1.42,0 0.66,-0.66 0.87,0.77 0.06,0.1a0.15,0.15 0,0 1,-0.11 0.06l-2.9,0.11v1.64l2.19,-0.06 0.55,-0.6 1.31,1.15a0.18,0.18 0,0 1,0.11 0.17,0.63 0.63,0 0,1 -0.17,0.1 3.64,3.64 0,0 0,-2.07 0.88c-0.11,0 -0.15,0 -0.11,-0.11l0.38,-1.26 -4.54,0.11 -0.49,0.06c-0.59,0.07 -1,0.12 -1.15,0.16L59,51.45l3.23,-0.11L62.23,49.7ZM59.52,53.5c1.13,0.29 1.73,0.58 1.81,0.88a0.91,0.91 0,0 1,-0.33 0.87c-0.22,0.18 -0.38,0.15 -0.49,-0.11a5.37,5.37 0,0 0,-1 -1.47C59.4,53.59 59.41,53.53 59.52,53.53ZM60.34,52.02c1,0.22 1.5,0.44 1.54,0.66a1,1 0,0 1,-0.28 0.82c-0.22,0.15 -0.36,0.11 -0.44,-0.11a2.31,2.31 0,0 0,-0.82 -1.26C60.23,52.13 60.23,52.09 60.34,52.05ZM63.46,57.02a7.17,7.17 0,0 1,3.06 1.53q0.23,0.44 -0.27,1.26c-0.15,0.15 -0.26,0.22 -0.33,0.22s-0.16,-0.09 -0.27,-0.27a7.39,7.39 0,0 0,-2.24 -2.63S63.39,57.07 63.46,57Z"
-        android:fillColor="#002747" />
-
+        android:pathData="M74.43,60.62s0,0 0,0l-0.23,0.23 -0.12,0.13h0l-0.1,-0.1s0,0 0,0l0.14,-0.06v-0.75h-0.24l-0.06,0h0.28l0.07,-0.08 0.14,0.08v0l0,0 0,0.67ZM74,59.55a0.41,0.41 0,0 1,0.22 0.13,0.15 0.15,0 0,1 -0.07,0.14s0,0 -0.07,0a0.46,0.46 0,0 0,-0.09 -0.24S74,59.54 74,59.55ZM74.78,60.06 L74.96,60.06s0,0 0,0l0,0 0,0.22a0.3,0.3 0,0 1,0 0.1h0.27l0.09,-0.11 0.13,0.12s0,0 0,0l-0.48,0c0,0.25 -0.32,0.44 -0.86,0.56h0v0c0.45,-0.13 0.69,-0.3 0.73,-0.54h-0.2l-0.15,0h0l0,0h0.42a0.44,0.44 0,0 0,0 -0.1v-0.13a0.6,0.6 0,0 0,0 -0.19ZM74.64,59.79 L74.47,59.79 74.47,59.74h0.32v0c0,-0.09 0,-0.15 0,-0.2l0.17,0h0a0,0 0,0 1,0 0s0,0 0,0.09v0.07L75,59.7l0.08,-0.08 0.1,0.1h-0.35L74.83,60h0.26l0.07,-0.07 0.15,0.13s0,0 0,0v0a0.39,0.39 0,0 0,-0.25 0.1h0l0,-0.15h-0.6l-0.14,0 0,-0.06h0.39v-0.2ZM74.41,60.25c0.13,0 0.21,0.07 0.21,0.11a0.1,0.1 0,0 1,0 0.1s0,0 -0.06,0a0.76,0.76 0,0 0,-0.13 -0.18S74.39,60.25 74.4,60.25ZM74.51,60.08c0.11,0 0.18,0.05 0.18,0.07a0.15,0.15 0,0 1,0 0.1s-0.05,0 -0.06,0a0.27,0.27 0,0 0,-0.09 -0.15S74.48,60.08 74.5,60.08ZM74.88,60.67a0.83,0.83 0,0 1,0.36 0.18,0.15 0.15,0 0,1 0,0.15l0,0 0,0a0.83,0.83 0,0 0,-0.27 -0.32Z"
+        android:fillColor="#fff" />
 </vector>
